# ai-query

./: Makefile  pyproject.toml
src/: main.py
src/evelyn/: open_source_prevails.py  open_source_promising_niche.py  open_source_startup_finder.py
